--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,5 @@
+@import './base/_settings';
 @import './base/base';
+@import './components/_button';
+@import './components/_container';
 @import './components/header';
